--- a/src/navigationBar/NavigationBar.css
+++ b/src/navigationBar/NavigationBar.css
@@ -4,7 +4,7 @@ body {
   
   ul {
     list-style-type: none;
-    margin-left: 200px;
+    margin-left:50%;
     padding: 0;
     overflow: hidden;
     background-color: white;
