--- a/src/segment.css
+++ b/src/segment.css
@@ -1,6 +1,7 @@
 .segments {
     padding: 4rem;
     background: #fff;
+    
   }
   
   h1 {
@@ -14,6 +15,7 @@
     max-width: 1120px;
     width: 90%;
     margin: 0 auto;
+    
   }
   
   .segments__wrapper {
@@ -30,6 +32,7 @@
     flex: 1;
     margin: 0 2rem;
     border-radius: 10px;
+    
   }
   
   .segments__item__link {
@@ -46,8 +49,8 @@
   
   .segments__item__pic-wrap {
     position: relative;
-    width: 90%;
-    padding-top: 65%;
+    width: 80%;
+    padding-top: 67%;
     overflow: hidden;
     
   }
@@ -69,6 +72,7 @@
     color: #fff;
     background-color: #0475cb;
     box-sizing: border-box;
+    
   }
   
   .segments__item__img {
@@ -79,11 +83,12 @@
     left: 0;
     display: block;
     width: 100%;
-    max-width: 95%;
+    max-width: 100%;
     height: 100%;
     max-height: 100%;
-    object-fit: cover;
+    object-fit: fill;
     transition: all 0.2s linear;
+    
   }
   
   .segments__item__img:hover {
@@ -116,4 +121,6 @@
     .segments__item {
       margin-bottom: 2rem;
     }
+    
   }
+  
