--- a/src/segment.css
+++ b/src/segment.css
@@ -1,11 +1,12 @@
 .segments {
     padding: 4rem;
-    background: #fff;
+    background: "black";
     
   }
   
   h1 {
     text-align: center;
+    color: #fff;
   }
   
   .segments__container {
@@ -30,8 +31,9 @@
   .segments__item {
     display: flex;
     flex: 1;
-    margin: 0 2rem;
+    margin:0 2rem;
     border-radius: 10px;
+    background-color: #fff;
     
   }
   
@@ -39,6 +41,7 @@
     display: flex;
     flex-flow: column;
     width: 100%;
+    height: 100%;
     box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
     -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
     filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
@@ -49,9 +52,11 @@
   
   .segments__item__pic-wrap {
     position: relative;
-    width: 80%;
+    width: 85%;
     padding-top: 67%;
+    
     overflow: hidden;
+    object-fit: cover;
     
   }
   
