--- a/src/components/homeComponents/BgImg.css
+++ b/src/components/homeComponents/BgImg.css
@@ -21,7 +21,8 @@ video {
   .bg-container > h1 {
     color: #fff;
     font-size: 100px;
-    margin-top: -100px;
+    /* margin-top: 
+    -100px; */
   }
   
   .bg-container > p {
@@ -61,28 +62,28 @@ video {
   @media screen and (max-width: 1110px) {
     .bg-container > h1 {
       font-size: 70px;
-      margin-top: -200px;
+      /* margin-top: -10px; */
     }
   }
   
   @media screen and (max-width: 960px) {
     .bg-container > h1 {
       font-size: 65px;
-      margin-top: -150px;
+      margin-top: 50px;
     }
   }
   
   @media screen and (max-width: 768px) {
     .bg-container > h1 {
       font-size: 40px;
-      margin-top: -100px;
+      margin-top: -20px;
     }
   }
 
     @media screen and (max-width: 390px) {
       .bg-container > h1 {
         font-size: 32px;
-        margin-top: -100px;
+        margin-top: 20vh;
       }
   
     .bg-container > p {
@@ -98,3 +99,5 @@ video {
       width: 100%;
     }
   }
+
+ 
