--- a/src/components/homeComponents/BgImg.css
+++ b/src/components/homeComponents/BgImg.css
@@ -5,28 +5,25 @@ video {
     position: fixed;
     z-index: -1;
   }
-  
-  .bg-container {
-    /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-    object-fit: contain;
-  }
-  
-  .bg-container > h1 {
+
+  h1 {
     color: #fff;
     font-size: 100px;
-    /* margin-top: 
-    -100px; */
+    margin-top: 
+    30px;
+  }
+  @media screen and (max-width: 1130px) {
+    h1 {
+      color: #fff;
+      font-size: 8vw;
+      margin-top: 
+      30px;
+    }
   }
   
-  .bg-container > p {
+   p {
     margin-top: 8px;
+    text-align: center;
     color: #fff;
     font-size: 32px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
@@ -44,51 +41,36 @@ video {
   .fa-play-circle {
     margin-left: 4px;
   }
+  .data_img{
+    object-fit: fill;
+    width:100%;
+    height:250px;
 
-
-  @media screen and (max-width: 1160px) {
-    .bg-container {
-      /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
-      height: 98vh;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-      object-fit: contain;
-    }
   }
-  @media screen and (max-width: 1110px) {
-    .bg-container > h1 {
-      font-size: 70px;
-      /* margin-top: -10px; */
-    }
+  .data_img:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+  }
+
+  .margin_box{
+  
+  width: 30vw;
+ }
+@media screen and (max-width: 1200px) {
+  .margin_box{
+    width: 28vw
   }
   
-  @media screen and (max-width: 960px) {
-    .bg-container > h1 {
-      font-size: 65px;
-      margin-top: 50px;
-    }
+}
+@media screen and (max-width: 1115px) {
+  .margin_box{
+    width: 26vw
   }
   
-  @media screen and (max-width: 768px) {
-    .bg-container > h1 {
-      font-size: 40px;
-      margin-top: -20px;
-    }
-  }
+}
+  
 
     @media screen and (max-width: 390px) {
-      .bg-container > h1 {
-        font-size: 32px;
-        margin-top: 20vh;
-      }
-  
-    .bg-container > p {
-      font-size: 30px;
-    }
   
     .btn-mobile {
       display: block;
