--- a/src/components/breadCrumb.css
+++ b/src/components/breadCrumb.css
@@ -13,3 +13,19 @@
     border-bottom: 1px solid black;
     /* transition: all 0.2s ease-out; */
   }
+
+  @media screen and (max-width: 450px) {
+    
+    .breadcrumb {
+      color: grey;
+      /* display: flex;
+      align-items: center; */
+      text-decoration: none;
+      /* padding: 0.5rem 1rem;
+      height: 55%; */
+      
+      margin-left: 30px;
+      font-size: large;
+
+    }
+}
