--- a/src/components/identityComponents/avatar.css
+++ b/src/components/identityComponents/avatar.css
@@ -6,3 +6,11 @@ a {
     text-decoration: none; 
     color: aliceblue;
 }
+
+.picBox5{
+    background-image: url("../../images/clock.png");
+    object-fit: fill;
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    
+  }
