--- a/src/components/breadCrumb.css
+++ b/src/components/breadCrumb.css
@@ -10,7 +10,7 @@
     font-size: x-large;
   }
   .breadcrumb:hover {
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid white;
     /* transition: all 0.2s ease-out; */
   }
 
