--- a/src/components/phishingDetectorComponents/phishingDetector.css
+++ b/src/components/phishingDetectorComponents/phishingDetector.css
@@ -12,11 +12,11 @@ background-image{
 .textField{
     width:500px;
 }
-.stack{
+/* .stack{
     margin-left: 35vw;
-}
+} */
 .stack1{
-    margin-left: 35vw;
+    /* margin-left: 35vw; */
     width:500px;
 }
 
@@ -30,112 +30,201 @@ background-image{
 }
 
 @media screen and (max-width: 1500px) {
-    .stack{
+    /* .stack{
         margin-left: 33vw;
     }
     .stack1{
         margin-left: 33vw;
         
-    }
+    } */
 }
 @media screen and (max-width: 1300px) {
-    .stack{
+    /* .stack{
         margin-left: 31vw;
     }
     .stack1{
         margin-left: 31vw;
-    }
+    } */
 }
 @media screen and (max-width: 1200px) {
-    .stack{
+    /* .stack{
         margin-left: 30vw;
     }
     .stack1{
         margin-left: 30vw;
-    }
+    } */
 }
 @media screen and (max-width: 1150px) {
     .textField{
         width:400px;
     }
-    .stack1{       
+    /* .stack1{       
         width:400px;
-    }
+    } */
 }
 @media screen and (max-width: 1100px) {
-    .stack{
+    /* .stack{
         margin-left: 29vw;
     }
     .stack1{
         margin-left: 29vw;
-    }
+    } */
 }
 @media screen and (max-width: 1000px) {
-    .stack{
+    /* .stack{
         margin-left: 28vw;
     }
     .stack1{
         margin-left: 28vw;
-    }
+    } */
 }
 @media screen and (max-width: 950px) {
-    .stack{
+    /* .stack{
         margin-left: 27vw;
-    }
+    } */
     .textField{
         width:350px;
     }
     .stack1{
-        margin-left: 27vw;
+        /* margin-left: 27vw; */
         width:350px;
     }
 }
 @media screen and (max-width: 850px) {
-    .stack{
+    /* .stack{
         margin-left: 26vw;
     }
     .stack1{
         margin-left: 26vw;
-    }
+    } */
     
 }
 @media screen and (max-width: 800px) {
-    .stack{
+    /* .stack{
         margin-left: 24vw;
     }
     .stack1{
         margin-left: 24vw;
-    }
+    } */
     
 }
 @media screen and (max-width: 750px) {
     .textField{
         width:300px;
     }
-    .stack1{
+    /* .stack1{
         width:300px;
-    }
+    } */
     
 }
 @media screen and (max-width: 650px) {
-    .stack{
+    /* .stack{
         margin-left: 22vw;
     }
     .stack1{
         margin-left: 22vw;
-    }
+    } */
     
 }
 
 @media screen and (max-width: 500px) {
-    .stack{
+    /* .stack{
         margin-left: 22vw;
-    }
+    } */
     .textField{
         width:200px;
     }
     .stack1{
-        margin-left: 22vw;
+        /* margin-left: 22vw; */
         width:200px;
     }
 }
+
+.field{
+    width: 500px;
+    height:60px;
+    border-radius: 4px;
+  position: relative;
+  background-color: transparent;
+  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out;
+  border: 4px solid;
+  border-color:#A36F09 ;
+}
+
+.field input{
+    width:100%;
+    height:100%;
+    position: relative;
+    padding: 0px 16px;
+  border: none;
+  border-radius: 4px;
+  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  background-color: transparent;
+  color: #ffff;
+  outline: none;
+  box-shadow: 0px 4px 20px 0px transparent;
+  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out,
+    0.1s padding ease-in-out;
+  -webkit-appearance: none;
+}
+
+.field:hover {
+    border-color: white;
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+  }
+
+  .MuiLoadingButton-root {
+    background-color: #FFF;
+  }
+
+  .field button {
+    position: absolute;
+    right: 0;
+    top : 5px;
+    height: 80%;
+    background-color: #FFF;
+    border: 4px solid;
+    border-radius: 12px;
+    border-color: #A36F09;
+  }
+  .field button:hover {
+    position: absolute;
+    right: 0;
+    top : 5px;
+    height: 80%;
+    background-color: #A36F09;
+  }
+  .submit{
+    width:80px;
+    background-color: #ffff;
+    color:#A36F09;
+    border: 4px solid;
+    border-color: #A36F09;
+    border-radius: 8px;
+    
+  }
+  .submit:hover{
+    width:80px;
+    background-color: #A36F09;
+    color:#ffff;
+    border: 4px solid;
+    border-color: #A36F09;
+    border-radius: 8px;
+    
+  }
+
+  .picBox6{
+    background-image: url("../../images/exclamation.png");
+    object-fit: fill;
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    
+  }
+  .picBox6:hover{
+
+    transform: scale(1.1);
+        cursor: pointer;
+      }
