--- a/src/components/signsComponents/signInfo.css
+++ b/src/components/signsComponents/signInfo.css
@@ -34,7 +34,7 @@
     
   }
   img.animated-gif{
-    width: 40%;
+    width: 50%;
     height: 30%;
-    margin-top: -3.5vw;
+    margin-top: 0px;
   }
