--- a/src/components/phishingDetectorComponents/phishingDetector.css
+++ b/src/components/phishingDetectorComponents/phishingDetector.css
@@ -4,6 +4,13 @@
     background-repeat: no-repeat;
     background-size:100% 100%;
 }
+.animated-gif{
+    
+    object-fit: fill;
+    height: 100%;
+  width: 100%;
+    
+  }
 
 background-image{
     object-fit: fill;
@@ -141,25 +148,29 @@ background-image{
 }
 
 .field{
-    width: 500px;
+    width: 550px;
     height:60px;
-    border-radius: 4px;
+    border-radius: 8px;
   position: relative;
   background-color: transparent;
   transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out;
   border: 4px solid;
   border-color:#A36F09 ;
+  
 }
 
+
+
 .field input{
-    width:100%;
+    width:85%;
     height:100%;
     position: relative;
-    padding: 0px 16px;
+    padding: 14px 16px;
+    
   border: none;
-  border-radius: 4px;
+  border-radius: 8px;
   font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-  font-size: 16px;
+  font-size: 25px;
   font-weight: 400;
   line-height: normal;
   background-color: transparent;
@@ -186,9 +197,10 @@ background-image{
     top : 5px;
     height: 80%;
     background-color: #FFF;
-    border: 4px solid;
+    border: 3px solid;
     border-radius: 12px;
     border-color: #A36F09;
+    margin-right: 5px;
   }
   .field button:hover {
     position: absolute;
@@ -204,6 +216,7 @@ background-image{
     border: 4px solid;
     border-color: #A36F09;
     border-radius: 8px;
+    font-size: large;
     
   }
   .submit:hover{
