Topic icons and progress icon update

--- a/src/components/phishingDetectorComponents/phishingDetector.css
+++ b/src/components/phishingDetectorComponents/phishingDetector.css
@@ -1,8 +1,8 @@
 .box {
-    background-image: url("../../images/robotHand.png");
-    object-fit: fill;
+    /* background-image: url("../../images/robotHand.png"); */
+    /* object-fit: fill;
     background-repeat: no-repeat;
-    background-size:100% 100%;
+    background-size:100% 100%; */
 }
 .animated-gif{
     
