--- a/src/components/phishingDetectorComponents/phishingDetector.css
+++ b/src/components/phishingDetectorComponents/phishingDetector.css
@@ -1,9 +1,4 @@
-.box {
-    /* background-image: url("../../images/robotHand.png"); */
-    /* object-fit: fill;
-    background-repeat: no-repeat;
-    background-size:100% 100%; */
-}
+
 .animated-gif{
     
     object-fit: fill;
@@ -208,6 +203,7 @@ background-image{
     top : 5px;
     height: 80%;
     background-color: #A36F09;
+    border-color: #FFFF;
   }
   .submit{
     width:80px;
@@ -224,7 +220,7 @@ background-image{
     background-color: #A36F09;
     color:#ffff;
     border: 4px solid;
-    border-color: #A36F09;
+    border-color: #FFFF;
     border-radius: 8px;
     
   }
