--- a/src/components/reportComponents/report.css
+++ b/src/components/reportComponents/report.css
@@ -1,20 +1,17 @@
 .reportButton {
     
-    width:300px;
-    /* right: 0;
-    top : 5px; */
+    width:370px;
     height: 60px;
     background-color: #A36F09;
     border: 4px solid;
     border-radius: 12px;
     border-color: #FFF;
-    color:#FFF
+    color:#FFF;
+    font-size: 20px;
   }
+
+
   .reportButton:hover {
-    
-    /* right: 0;
-    top : 5px; */
-    height: 60px;
     background-color: #FFF;
     border-color:  #A36F09;
     color:#A36F09;
