Simulator page update

--- a/src/components/signsComponents/signs.css
+++ b/src/components/signsComponents/signs.css
@@ -14,3 +14,42 @@
     font-size: 35px;
     cursor: pointer;
 }
+
+.breadcrumb {
+    color: grey;
+    text-decoration: none;
+    margin-left: 30px;
+    font-size: x-large;
+  }
+  .breadcrumb:hover {
+    border-bottom: 2px solid white;
+    
+  }
+
+  .breadcrumb1 {
+    color: grey;
+    text-decoration: none;
+    margin-left: 5px;
+    font-size: x-large;
+  }
+  .breadcrumb1:hover {
+    border-bottom: 2px solid white;
+    
+  }
+
+  @media screen and (max-width: 660px) {
+    
+    .breadcrumb {
+      color: grey;
+      text-decoration: none;
+      margin-left: 5px;
+      font-size: large;
+
+    }
+    .breadcrumb1 {
+      color: grey;
+      text-decoration: none;
+      margin-left: 5px;
+      font-size: large;
+    }
+}
