--- a/src/components/breadCrumb.css
+++ b/src/components/breadCrumb.css
@@ -11,21 +11,45 @@
   }
   .breadcrumb:hover {
     border-bottom: 2px solid white;
-    /* transition: all 0.2s ease-out; */
+    
+  }
+
+  .breadcrumb1 {
+    color: grey;
+    /* display: flex;
+    align-items: center; */
+    text-decoration: none;
+    /* padding: 0.5rem 1rem;
+    height: 55%; */
+    
+    margin-left: 5px;
+    font-size: x-large;
+  }
+  .breadcrumb1:hover {
+    border-bottom: 2px solid white;
+    
   }
 
   @media screen and (max-width: 450px) {
     
     .breadcrumb {
       color: grey;
-      /* display: flex;
-      align-items: center; */
+      
       text-decoration: none;
-      /* padding: 0.5rem 1rem;
-      height: 55%; */
+      
+ 
       
       margin-left: 30px;
       font-size: large;
 
+    }
+    .breadcrumb1 {
+      color: grey;
+      
+      text-decoration: none;
+      
+      
+      margin-left: 5px;
+      font-size: large;
     }
 }
