--- a/src/components/homeComponents/Navbar.css
+++ b/src/components/homeComponents/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    background: linear-gradient(90deg, #A36F09 0%, #A36F09 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     height: 80px;
-    max-width: 100vw;
+    max-width: 100%;
   }
   
   .navbar-logo {
@@ -35,12 +35,12 @@
   }
   
   .nav-menu {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(4, auto);
     grid-gap: 10px;
     list-style: none;
     text-align: center;
-    width: 75vw;
+    width: 65vw;
     justify-content: end;
     margin-right: 2rem;
   }
@@ -56,6 +56,7 @@
     text-decoration: none;
     padding: 0.5rem 1rem;
     height: 75%;
+    font-family: Montserrat Subrayada;
   }
   
   
@@ -84,18 +85,19 @@
     .nav-menu {
       display: flex;
       flex-direction: column;
-      width: 70vw;
-      height: 90vh;
-      position: absolute;
+      width: 50vw;
+      height: 100%;
+      position: fixed;
       top: 60px;
       left: -80%;
       opacity: 1;
       transition: all 0.5s ease;
+      justify-content: start;
       
     }
   
     .nav-menu.active {
-      background: #242222;
+      background: #A36F09;
       left: 0;
       opacity: 1;
       transition: all 0.5s ease;
