--- a/src/components/homeComponents/Navbar.css
+++ b/src/components/homeComponents/Navbar.css
@@ -43,6 +43,7 @@
     width: 65vw;
     justify-content: end;
     margin-right: 2rem;
+    margin-left: 15vw;
   }
   
   .nav-item {
@@ -74,17 +75,31 @@
   }
   
   .menu-icon {
-    display: none;
+    display: block;
+      font-size: 1.8rem;
+      cursor: pointer;
   }
   
-  @media screen and (max-width: 960px) {
+  @media screen and (max-width: 860px) {
+    .navbar {
+      background: linear-gradient(90deg, #A36F09 0%, #A36F09 100%);
+      height: 80px;
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      font-size: 1.2rem;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+      
+    }
     .NavbarItems {
       position: relative;
     }
   
     .nav-menu {
-      display: flex;
-      flex-direction: column;
+      display: none;
+      /* flex-direction: column;
       width: 50vw;
       height: 100%;
       position: fixed;
@@ -92,19 +107,19 @@
       left: -80%;
       opacity: 1;
       transition: all 0.5s ease;
-      justify-content: start;
+      justify-content: start; */
       
     }
   
-    .nav-menu.active {
+    /* .nav-menu.active {
       background: #A36F09;
       left: 0;
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
-    }
+    } */
   
-    .nav-links {
+    /* .nav-links {
       text-align: center;
       padding: 2rem;
       width: 80%;
@@ -139,15 +154,19 @@
       
       transform: translate(25%, 50%);
     }
-  
+   */
     .menu-icon {
-      display: block;
+      /* display: block;
       position: absolute;
       top: 0;
       right: 0;
       transform: translate(-100%, 60%);
       font-size: 1.8rem;
+      cursor: pointer; */
+      display: block;
+      font-size: 1.8rem;
       cursor: pointer;
+      margin-left: 10vw;
     }
   
     .fa-times {
@@ -155,24 +174,74 @@
       font-size: 2rem;
     }
   
-    .nav-links-mobile {
-      display: block;
-      text-align: center;
-      margin: 2rem auto;
-      border-radius: 4px;
-      width: 70vw;
-      text-decoration: none;
-      font-size: 2rem;
-      background-color: transparent;
-      color: #fff;
-      padding: 14px 20px;
-      border: 1px solid #fff;
-      transition: all 0.3s ease-out;
-    }
-  
-    .nav-links-mobile:hover {
-      background: #fff;
-      color: #242424;
-      transition: 250ms;
-    }
+    
+    
+  }
+
+  .nav-menu1.active {
+    background: #A36F09;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease; 
+    z-index: 1;
+    list-style-type: none;
+    
+  }
+  .nav-menu1 {
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: 100%;
+    position: fixed;
+    top: 60px;
+    left: -80%;
+    opacity: 1;
+    transition: all 0.5s ease;
+    list-style-type: none;
+    
+  }
+
+  .nav-links1 {
+    text-align: center;
+    padding: 1rem;
+    width: 80%;
+    height: 10px;
+    display: table;
+    font-family: Montserrat;
+    
+  }
+
+  .nav-item1{
+    margin-bottom: 15px;
+    height: 50px;
+    font-size: 30px;
+  }
+
+  .nav-links1:hover {
+    background-color: #fff;
+    color: #242424;
+    border-radius: 0;
+  }
+
+  .nav-links2 {
+    text-align: center;
+    padding: 1rem;
+    width: 80%;
+    height: 5%;
+    display: table;
+    font-family: Montserrat;
+    
+  }
+
+  .nav-item2{
+    margin-bottom: -20px;
+    font-size: 20px;
+    font-family: Montserrat Alternates;
+  }
+
+  .nav-links2:hover {
+    background-color: #fff;
+    color: #242424;
+    border-radius: 0;
+    
   }
