--- a/src/components/homeComponents/Navbar.css
+++ b/src/components/homeComponents/Navbar.css
@@ -43,7 +43,7 @@
     width: 65vw;
     justify-content: end;
     margin-right: 2rem;
-    margin-left: 15vw;
+    margin-left: 1vw;
   }
   
   .nav-item {
@@ -80,7 +80,7 @@
       cursor: pointer;
   }
   
-  @media screen and (max-width: 860px) {
+  @media screen and (max-width: 990px) {
     .navbar {
       background: linear-gradient(90deg, #A36F09 0%, #A36F09 100%);
       height: 80px;
@@ -190,7 +190,7 @@
   .nav-menu1 {
     display: flex;
     flex-direction: column;
-    width: 50vw;
+    width: 400px;
     height: 100%;
     position: fixed;
     top: 60px;
@@ -198,16 +198,18 @@
     opacity: 1;
     transition: all 0.5s ease;
     list-style-type: none;
+    margin-left: -60px;
     
   }
 
   .nav-links1 {
     text-align: center;
     padding: 1rem;
-    width: 80%;
+    width: 100%;
     height: 10px;
     display: table;
     font-family: Montserrat;
+    list-style-type: none;
     
   }
 
@@ -215,18 +217,21 @@
     margin-bottom: 15px;
     height: 50px;
     font-size: 30px;
+    list-style-type: none;
   }
 
   .nav-links1:hover {
     background-color: #fff;
     color: #242424;
     border-radius: 0;
+    width: 92%;
+    
   }
 
   .nav-links2 {
     text-align: center;
     padding: 1rem;
-    width: 80%;
+    width: 100%;
     height: 5%;
     display: table;
     font-family: Montserrat;
@@ -243,5 +248,6 @@
     background-color: #fff;
     color: #242424;
     border-radius: 0;
+    width: 92%;
     
   }
