--- a/src/components/quickExperienceComponents/quickExperience.css
+++ b/src/components/quickExperienceComponents/quickExperience.css
@@ -1,15 +1,4 @@
-.avatars{
-    position:fixeds;
-}
-
-.cardLink {
-    text-decoration: none; 
-    color: aliceblue;
-}
-a{text-decoration: none; 
-    color: aliceblue;}
-
-.quizButton{
+.quickButton{
     color:#FFFF;
     background-color: #A36F09;
     font-size: 30px;
@@ -19,10 +8,9 @@ a{text-decoration: none;
     border-radius: 8px;
 }
 
-.quizButton:hover{
+.quickButton:hover{
     color:#A36F09;
     background-color: #FFFF;
-    font-size: 35px;
+    font-size: 31px;
     cursor: pointer;
 }
-
