--- a/src/components/homeComponents/BgImg.css
+++ b/src/components/homeComponents/BgImg.css
@@ -2,8 +2,8 @@ video {
     object-fit: fill;
     width: 100%;
     height: 100%;
-    position: fixed;
-    z-index: -1;
+    /* position: fixed;
+    z-index: -1; */
   }
   .button1{
     width: 100%;
