--- a/src/components/homeComponents/BgImg.css
+++ b/src/components/homeComponents/BgImg.css
@@ -5,6 +5,13 @@ video {
     /* position: fixed;
     z-index: -1; */
   }
+  .homeVideo {
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -1;
+  }
   .button1{
     width: 100%;
                     font-size: 30px;
