--- a/src/components/homeComponents/Navbar.css
+++ b/src/components/homeComponents/Navbar.css
@@ -190,7 +190,7 @@
   .nav-menu1 {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 390px;
     height: 100%;
     position: fixed;
     top: 60px;
@@ -198,12 +198,12 @@
     opacity: 1;
     transition: all 0.5s ease;
     list-style-type: none;
-    margin-left: -60px;
+    margin-left: -54px;
     
   }
 
   .nav-links1 {
-    text-align: center;
+    /* text-align: center; */
     padding: 1rem;
     width: 100%;
     height: 10px;
@@ -229,7 +229,7 @@
   }
 
   .nav-links2 {
-    text-align: center;
+    /* text-align: center; */
     padding: 1rem;
     width: 100%;
     height: 5%;
