Theme color update

--- a/src/components/homeComponents/BgImg.css
+++ b/src/components/homeComponents/BgImg.css
@@ -15,7 +15,7 @@ video {
   .button1{
     width: 100%;
                     font-size: 30px;
-                    background-color: #a36f09;
+                    background-color: #59CE8F ;
                     color: #FFF;
                     border: 0;
                     border-radius: 10px;
