--- a/src/components/identityComponents/avatar.css
+++ b/src/components/identityComponents/avatar.css
@@ -11,7 +11,7 @@ a{text-decoration: none;
 
 .quizButton{
     color:#FFFF;
-    background-color: #A36F09;
+    background-color: #59CE8F;
     font-size: 30px;
     font-family: Montserrat;
     width: 300px;
@@ -20,19 +20,23 @@ a{text-decoration: none;
 }
 
 .quizButton:hover{
-    color:#A36F09;
+    color:#59CE8F;
     background-color: #FFFF;
     font-size: 35px;
     cursor: pointer;
 }
 
+
 .flip-card {
     background-color: transparent;
-    width: 500px;
-    height: 500px;
-    border: 1px solid #f1f1f1;
+    /* min-width: 480px; */
+    width: 335px;
+    /* max-height: 480px; */
+    height: 430px;
+    /* border: 1px solid #f1f1f1; */
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
     border: 0;
+    display: inline-block;
   }
   
   /* This container is needed to position the front and back side */
@@ -67,7 +71,22 @@ a{text-decoration: none;
   
   /* Style the back side */
   .flip-card-back {
-    background-color: dodgerblue;
+    background-color: #59CE8F;
     color: white;
     transform: rotateY(180deg);
   }
+  .backImg{
+    object-fit: fill;
+  }
+  
+
+  
+  /* .MuiSlider-thumb{ 
+    color: green;
+  }
+  .MuiSlider-rail{
+    color:#59CE8F;
+  }*/
+  /* .MuiSlider-track{
+    color: green;
+  }  */
