--- a/src/components/homeComponents/BgImg.css
+++ b/src/components/homeComponents/BgImg.css
@@ -5,6 +5,20 @@ video {
     /* position: fixed;
     z-index: -1; */
   }
+
+  .box1:hover .numberInBox{
+    font-size: 80px;
+    color:#59CE8F;
+  }
+  
+  
+  .numberInBox{
+    font-size: 70px;
+    color:#E8F9FD;
+    text-align: center;
+    margin-top: -5px;
+    margin-bottom: -5px;
+  }
   .homeVideo {
     object-fit: fill;
     width: 100%;
