--- a/src/components/signsComponents/signs.css
+++ b/src/components/signsComponents/signs.css
@@ -1,6 +1,6 @@
 .simulationButton{
     color:#FFFF;
-    background-color: #A36F09;
+    background-color: #59CE8F;
     font-size: 30px;
     font-family: Montserrat;
     width: 300px;
@@ -9,7 +9,7 @@
 }
 
 .simulationButton:hover{
-    color:#A36F09;
+    color:#59CE8F;
     background-color: #FFFF;
     font-size: 35px;
     cursor: pointer;
