--- a/src/components/identityComponents/avatar.css
+++ b/src/components/identityComponents/avatar.css
@@ -65,7 +65,7 @@ a{text-decoration: none;
   
   /* Style the front side (fallback if image is missing) */
   .flip-card-front {
-    background-color: #bbb;
+    background-color: black;
     color: black;
   }
   
