--- a/src/components/phishingDetectorComponents/phishingDetector.css
+++ b/src/components/phishingDetectorComponents/phishingDetector.css
@@ -203,8 +203,7 @@ background-image{
     border-color: #FFFF;
   }
   .submit{
-    width:80px;
-    background-color: #ffff;
+    background-color: black;
     color:#59CE8F;
     border: 4px solid;
     border-color: #59CE8F;
@@ -213,7 +212,7 @@ background-image{
     
   }
   .submit:hover{
-    width:80px;
+    
     background-color: #59CE8F;
     color:#ffff;
     border: 4px solid;
