--- a/src/components/hackComponents/hack.css
+++ b/src/components/hackComponents/hack.css
@@ -8,3 +8,19 @@
   .gifBox{
     background-image: "../../images/hackImg.gif";
   } */
+  .quizButton{
+    color:#FFFF;
+    background-color: #59CE8F;
+    font-size: 30px;
+    font-family: Montserrat;
+    width: 300px;
+    height: 50px;
+    border-radius: 8px;
+}
+
+.quizButton:hover{
+    color:#59CE8F;
+    background-color: #FFFF;
+    font-size: 35px;
+    cursor: pointer;
+}
